Agregada la funcionalidad de verificar lo que se ingresa por medio de textarea

--- a/Frontend/GeneradorCodigoIntermedio/src/index.html
+++ b/Frontend/GeneradorCodigoIntermedio/src/index.html
@@ -13,129 +13,8 @@
 </head>
 
 <body>
-  <nav>
-    <img src="assets/img/program.png" width="40px">
-  </nav>
-  <div id="menu">
-    <div class="dropdown">
-      <button class="dropbtn">Archivo</button>
-      <div class="dropdown-content">
-        <a href="#">Nuevo archivo</a>
-        <a href="#">Abrir proyecto</a>
-        <a href="#">Abrir archivo</a>
-        <a href="#">Guardar</a>
-        <a href="#">Guardar como</a>
-        <a href="#">Cerrar proyecto</a>
-      </div>
-    </div>
-    <div class="dropdown">
-      <button class="dropbtn">Generar</button>
-      <div class="dropdown-content">
-        <a href="#">Código en tres direcciones</a>
-        <a href="#">Código optimizado</a>
-        <a href="#">Código assembler</a>
-      </div>
-    </div>
-    <div class="dropdown">
-      <button class="dropbtn">Descargar</button>
-      <div class="dropdown-content">
-        <a href="#">Código en tres direcciones</a>
-        <a href="#">Código optimizado</a>
-        <a href="#">Código assembler</a>
-      </div>
-    </div>
-    <div class="dropdown">
-      <button class="dropbtn">Reporte</button>
-      <div class="dropdown-content">
-        <a href="#">Ver reporte</a>
-      </div>
-    </div>
-  </div>
-  <div id="cuerpo">
-    <div id="pestaña">
-      <div class="contenedor-img seleccionado-contenedor">
-        <img src="assets/img/codearea.png" title="Editor de codigo" width="40px" id="codearea"
-          class="pestañas seleccionado" onclick="imgClick(this)">
-      </div>
-      <div class="contenedor-img">
-        <img src="assets/img/c.png" title="Codigo tres direcciones C" width="40px" id="c" class="pestañas"
-          onclick="imgClick(this)">
-      </div>
-      <div class="contenedor-img">
-        <img src="assets/img/cop.png" title="Codigo optimizado C" width="40px" id="cop" class="pestañas"
-          onclick="imgClick(this)">
-      </div>
-      <div class="contenedor-img">
-        <img src="assets/img/asm.png" title="Codigo optimizado Assembler" width="40px" id="asm" class="pestañas"
-          onclick="imgClick(this)">
-      </div>
-      <div class="contenedor-img">
-        <img src="assets/img/reporte2.png" title="Reportes" width="40px" id="asm" class="pestañas"
-          onclick="imgClick(this)">
-      </div>
-      <div class="contenedor-img">
-        <img src="assets/img/reporte.png" title="Errores" width="40px" id="errores" class="pestañas"
-          onclick="imgClick(this)">
-      </div>
-    </div>
-    <div id="area-editor">
-      <div id="arbol">
-        <div class="contenedor-img">
-          <span>PROYECTO</span>
-          <img src="assets/img/abrir.png" title="Abrir" width="20px" id="abrir" style="margin-left: 1em;">
-          <img src="assets/img/cerrar.png" title="Cerrar" width="20px" id="cerrar" style="margin-left: 1em;">
-        </div>
-        <hr>
-        <div id="contenedor-arbol">
-          <ul>
-            <li><span class="caret"><img width="15em" src="assets/img/folder-cerrado.png" class="folder" title="Paquete">Paquete</span><img width="15em" class="nuevo-archivo" onclick="nuevo_archivo(this)" title="Nuevo archivo">
-              <ul class="nested">
-                <li><div class="div-archivo"><img width="15em" class="archivo" title=".mgl">archivo</div></li>
-                <li><div class="div-archivo"><img width="15em" class="archivo" title=".mgl">archivo</div></li>
-                <li><span class="caret"><img width="15em" src="assets/img/folder-cerrado.png" class="folder" title="Paquete">Paquete</span><img width="15em" class="nuevo-archivo" onclick="nuevo_archivo(this)" title="Nuevo archivo">
-                  <ul class="nested">
-                    <li><div class="div-archivo"><img width="15em" class="archivo" title=".mgl">archivo</div></li>
-                    <li><div class="div-archivo"><img width="15em" class="archivo" title=".mgl">archivo</div></li>
-                    <li><span class="caret"><img width="15em" src="assets/img/folder-cerrado.png" class="folder" title="Paquete">Paquete</span><img width="15em" class="nuevo-archivo" onclick="nuevo_archivo(this)" title="Nuevo archivo">
-                      <ul class="nested">
-                        <li><div class="div-archivo"><img width="15em" class="archivo" title=".mgl">archivo</div></li>
-                        <li><div class="div-archivo"><img width="15em" class="archivo" title=".mgl">archivo</div></li>
-                      </ul>
-                    </li>
-                  </ul>
-                </li>
-              </ul>
-            </li>
-          </ul>
-        </div>
-      </div>
-      <div id="textarea-object">
-        <div id="menu-archivo">
-          <span id="nombre-archivo">sin-titulo.mgl<img src="assets/img/cerrar2.png" title="Cerrar" width="12em" id="cerrar-archivo"></span>
-          <img src="assets/img/guardar.png" alt="Guardar" width="21em" height="21em" title="Guardar">
-          <img src="assets/img/guardar-como.png" alt="Guardar-como" width="25em" height="25em" title="Guardar como">
-        </div>
-        <div id="textarea"></div>
-        <div id="visor">Linea: 0 Columna: 0</div>
-      </div>
-    </div>
-  </div>
-  <script>
-    function imgClick(boton) {
-      var imagenes = document.querySelectorAll(".pestañas");
-      for (let i = 0; i < imagenes.length; i++) {
-        imagenes[i].classList.remove("seleccionado");
-        var divs = imagenes[i].parentNode;
-        divs.classList.remove("seleccionado-contenedor");
-      }
-      boton.classList.add("seleccionado");
-      boton.parentNode.classList.add("seleccionado-contenedor");
-    }
-  </script>
-  <script src="assets/scripts/textarea.js"></script>
-  <div id="oculto">
-
-  </div>
+  <app-root></app-root>
+  <script src="assets/js/analizador.js"></script>
 </body>
 
 </html>
