--- a/Frontend/GeneradorCodigoIntermedio/src/index.html
+++ b/Frontend/GeneradorCodigoIntermedio/src/index.html
@@ -15,6 +15,7 @@
 <body>
   <app-root></app-root>
   <script src="assets/js/analizador.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 </body>
 
 </html>
